# axum-pro

./: Cargo.toml  Readme.MD
.cargo/: config.toml
examples/: gen_key.rs  quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  error.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
src/web/rpc/: mod.rs  task_rpc.rs
web-folder/: index.html
