[package]
name = "axum-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
# -- Web
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.10"
# -- Data
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
sqlb = "0.4"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Json
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
# -- Others
lazy-regex = "3.3"
async-trait = "0.1"
strum_macros = "0.26"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1"
serial_test = "3.2"
